# Biot

./: .gitignore  CMakeLists.txt  README.md
sources/: CMakeLists.txt  TPZName.cpp  TPZName.h
targets/: CMakeLists.txt  main.cpp
